# ChangeLog for dev-db/mongodb
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/ChangeLog,v 1.29 2011/12/12 15:54:34 ultrabug Exp $

*mongodb-2.0.2_rc2 (12 Dec 2011)

  12 Dec 2011; Ultrabug <ultrabug@gentoo.org> +mongodb-2.0.2_rc2.ebuild:
  Version bump.

*mongodb-2.0.2_rc1 (23 Nov 2011)

  23 Nov 2011; Ultrabug <ultrabug@gentoo.org> -mongodb-2.0.2_rc0.ebuild,
  +mongodb-2.0.2_rc1.ebuild:
  version bump, use back regular SRC_URI.

*mongodb-2.0.2_rc0 (18 Nov 2011)

  18 Nov 2011; Ultrabug <ultrabug@gentoo.org> -mongodb-1.8.2-r1.ebuild,
  -mongodb-2.0.2_pre20111116.ebuild, +mongodb-2.0.2_rc0.ebuild,
  files/mongodb-2.0-fix-scons.patch:
  Version bump, drop old

*mongodb-2.0.2_pre20111116 (16 Nov 2011)

  16 Nov 2011; Ultrabug <ultrabug@gentoo.org>
  +mongodb-2.0.2_pre20111116.ebuild, +files/mongodb-2.0-fix-scons.patch:
  Bump for 2.x pre-release version.

  27 Oct 2011; Ultrabug <ultrabug@gentoo.org> mongodb-1.8.4-r1.ebuild:
  Fixed mms-agent SRC_URI

*mongodb-1.8.4-r1 (27 Oct 2011)

  27 Oct 2011; Ultrabug <ultrabug@gentoo.org> -mongodb-1.8.4.ebuild,
  +mongodb-1.8.4-r1.ebuild, +files/mms-agent.confd, files/mms-agent.initd:
  Fix mms-agent settings overwrite by adding a confd file.

*mongodb-1.8.4 (26 Oct 2011)

  26 Oct 2011; Ultrabug <ultrabug@gentoo.org> +mongodb-1.8.4.ebuild,
  +files/mms-agent.initd, metadata.xml:
  Version bump. Install the MMS agent via IUSE. Thanks to Julien Thebault for
  testing.

  19 Oct 2011; Ultrabug <ultrabug@gentoo.org> mongodb-1.8.2-r1.ebuild,
  mongodb-1.8.3.ebuild:
  fix typo in ebuilds

*mongodb-1.8.3 (26 Aug 2011)

  26 Aug 2011; Ultrabug <ultrabug@gentoo.org> -mongodb-1.6.5-r1.ebuild,
  -files/mongodb-1.6-fix-scons.patch, -mongodb-1.8.2_rc3.ebuild,
  -mongodb-1.8.2.ebuild, mongodb-1.8.2-r1.ebuild, +mongodb-1.8.3.ebuild,
  files/mongodb.confd, files/mongodb.initd, files/mongos.confd,
  files/mongos.initd, metadata.xml: