@@ -13,18 +13,16 @@ AUX mongos.initd 1407 RMD160 2b859fe4e6a7a348c06d9d149a34251d442efbf0 SHA1 57a82
 DIST 20111027-10gen-mms-agent.zip 25241 RMD160 418b238a317583bace686f1386b2a4d0c7c78a92 SHA1 37349cfa1453eaecf7354f3d4a2595efdea02a95 SHA256 e5625ce9029a376674d24b242527459403ac782d18c78d91beab93fa8f6783f1
 DIST mongodb-src-r1.8.3.tar.gz 1726144 RMD160 9662b6963e7e6a4b5adcbea3faa36dd50a794457 SHA1 3c5c9819ef20c759aec1dc6800a3c4d4f6841299 SHA256 ee121c9698a48b819f1c5b5ba10a98d565bd732d527743f1475f54f697dd63e2
 DIST mongodb-src-r1.8.4.tar.gz 1727826 RMD160 6b561592b4f58f08ca2789e5ab92a3d31597912e SHA1 d296a6e04057e17989de5c7ded3a8c4d28285156 SHA256 c4e27bf22f2353e28ce169dbdbc24205baf863d1f61bd9a31b2230386cada4ae
-DIST mongodb-src-r2.0.2-rc1.tar.gz 2955888 RMD160 373d373a66fb5c721835217920dc70a6c203f9a0 SHA1 92e73fedf82dcd9049fb0cc93661e2c8c1f20622 SHA256 ec8fd245edfd8c9cb76df657e7a0f7a3c87448b3c6239f597982c675c20a23f2
-DIST mongodb-src-r2.0.2-rc2.tar.gz 2956224 RMD160 80efab525b0058f81d4a5e36a58cb56dc73e35ca SHA1 4b0772d18300baf5cd57525ce0d131e3b772430a SHA256 bcb745595f51d86dca80adf66189ec5af0d3b16b75f1ffc9f0481f76591635ed
+DIST mongodb-src-r2.0.2.tar.gz 2956087 RMD160 29a7052638236bffec5dff1d53bd5b870b8df3ef SHA1 f1d260a6845f761a1abfa27053bf7c1efdae353f SHA256 e4a498c435532470e8aa7ea1d0119558e0f061c7574659e0ebc0e29cbee2ac8f
 EBUILD mongodb-1.8.3.ebuild 2013 RMD160 d4b6aa684d5ff860fe570ed597128344ff15cb7e SHA1 ff8deee519548ef021632e671707728d5b321824 SHA256 42b7bb8edb6b19f3cb98681fc07f143722d0e61d73b8458c4479a53659154923
 EBUILD mongodb-1.8.4-r1.ebuild 2416 RMD160 3d4796a1bae38ee88f840c187210670a0587ba18 SHA1 a2eca19cc6a570c1fd3eea5ab9642511f6052056 SHA256 19fd7efd7411cba453a224ba95904c31c5d0233d46c9683ec41fb0c6c309ad83
-EBUILD mongodb-2.0.2_rc1.ebuild 2593 RMD160 5079e6e3ede2953ae347e8f12aacbbf4273487a3 SHA1 f6bc60a4ed70a9cd7674c1e1ad9a6b2a080a1263 SHA256 9cafd0482af7a6bd5831e3a823aacd24b1a04e9e43336d7110cf94965d29273f
-EBUILD mongodb-2.0.2_rc2.ebuild 2593 RMD160 e02d49f17be791ebfed5d46efae7f57573be9881 SHA1 d77bab9a47c9697a1ad1e4c428725e7c3a6a2238 SHA256 32b9d714b76d0db2b2baa73152f286332659d0fa91a6544a8e89f64b137f7486
-MISC ChangeLog 7395 RMD160 3c12229d09ce7ea79818524c492c63ff665bd0f4 SHA1 338b904f3afee16fbe397b65e583cee3e279040a SHA256 c85a394031234369ee782c7d434fe9ecad568497ca0e33487c7fcb12cb876be2
+EBUILD mongodb-2.0.2.ebuild 2589 RMD160 38fb5722d6fe87dd46629428169c83c25c12331a SHA1 77aaa276481e4bf4002bdc60e3e8b891c69964e7 SHA256 6e65c94495b3e8906325ff530d571797cdce533bf62acc9a38b956ee9130915e
+MISC ChangeLog 7592 RMD160 35f7b299303d0bcaa562da21ac7c1f1cdb4d6032 SHA1 6ca8088605e69a6636319591b10ca9c5fd1eec50 SHA256 1d0c0e767f63cab5b7475ba37e41817e8326893ae921462fa74ffc53cf11047d
 MISC metadata.xml 1094 RMD160 382287bd018ebf994f0997376095d1735858ca0f SHA1 4063b9bc6bb3d95e4b1a5aab9bf63ea567f92329 SHA256 8b325542cc2200f22d21915688992073cc1b0a8c5c4f08f34771df2ac6a9cfaf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iF4EAREIAAYFAk7mI8MACgkQKiQSS7ZY+hORWAD6AmyLJRi+65NreB1nnnCz8hF2
-S6SMEL0hoKxuiIvs1b0BAMgbXcLyH8tltf/yOAepeE95uj0jfHalutwhSkUglVHc
-=aC9Q
+iF4EAREIAAYFAk7pxDsACgkQKiQSS7ZY+hOpiAEAhKytW36/tldYv5E+jiHk3nJ2
+ARzN6zTfYQt7hi7eaVABAMIHTLuQH0iOLt4zQm9srlzOd18CRVd920nrf+RHU90w
+=NEpO
 -----END PGP SIGNATURE-----
