@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/mongodb-2.0.2_rc1.ebuild,v 1.1 2011/11/23 12:29:18 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/mongodb-2.0.2.ebuild,v 1.1 2011/12/15 09:56:02 ultrabug Exp $
 
 EAPI=4
 SCONS_MIN_VERSION="1.2.0"
