@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/mongodb
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/ChangeLog,v 1.29 2011/12/12 15:54:34 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/ChangeLog,v 1.30 2011/12/15 09:56:02 ultrabug Exp $
+
+*mongodb-2.0.2 (15 Dec 2011)
+
+  15 Dec 2011; Ultrabug <ultrabug@gentoo.org> -mongodb-2.0.2_rc1.ebuild,
+  -mongodb-2.0.2_rc2.ebuild, +mongodb-2.0.2.ebuild:
+  Version bump, drop release candidates.
 
 *mongodb-2.0.2_rc2 (12 Dec 2011)
 
